feat: display logo

--- a/nx.json
+++ b/nx.json
@@ -3,8 +3,8 @@
   "targetDefaults": {
     "@angular/build:application": {
       "cache": true,
-      "dependsOn": [ "^build" ],
-      "inputs": [ "default", "^default" ]
+      "dependsOn": ["^build"],
+      "inputs": ["default", "^default"]
     },
     "@nx/eslint:lint": {
       "cache": true,
@@ -17,7 +17,7 @@
     },
     "@nx/vite:test": {
       "cache": true,
-      "inputs": [ "default", "^default" ]
+      "inputs": ["default", "^default"]
     }
   },
   "plugins": [
@@ -40,6 +40,9 @@
       "linter": "eslint",
       "style": "scss",
       "unitTestRunner": "vitest"
+    },
+    "@nx/angular:component": {
+      "style": "scss"
     }
   },
   "defaultProject": "artificer"
