--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@testing-library/angular": "^17.4.0",
+    "@testing-library/angular": "^18.0.0",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.29.0",
