--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "^21.3.9",
-    "@nx/devkit": "21.3.9",
-    "@nx/eslint": "21.3.9",
-    "@nx/eslint-plugin": "21.3.9",
-    "@nx/js": "21.3.9",
-    "@nx/playwright": "21.3.9",
-    "@nx/vite": "21.3.9",
-    "@nx/web": "21.3.9",
+    "@nx/angular": "21.4.1",
+    "@nx/devkit": "21.4.1",
+    "@nx/eslint": "21.4.1",
+    "@nx/eslint-plugin": "21.4.1",
+    "@nx/js": "21.4.1",
+    "@nx/playwright": "21.4.1",
+    "@nx/vite": "21.4.1",
+    "@nx/web": "21.4.1",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~20.1.0",
     "@swc-node/register": "~1.9.1",
@@ -51,7 +51,7 @@
     "husky": "^9.1.7",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
-    "nx": "21.3.9",
+    "nx": "21.4.1",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
